--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Meetup <meetup-devp@devon.nl>
 RUN echo 'deb [trusted=yes] https://repo.symfony.com/apt/ /' | tee /etc/apt/sources.list.d/symfony-cli.list
 # Install developer dependencies
 RUN apt-get update -yqq && apt-get install -y \
-    openssl git wget vim libsqlite3-dev libxml2-dev libicu-dev \
+    openssl git vim libsqlite3-dev libxml2-dev libicu-dev \
     libfreetype6-dev libmcrypt-dev libjpeg62-turbo-dev libpng-dev \
     libzip-dev unzip libonig-dev \
     libcurl4-gnutls-dev libbz2-dev libssl-dev -yqq \
